--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": { "start": "node index.js" },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "algebra": "^1.0.1",
     "algebra.js": "^0.2.6",
-    "discord": "^0.8.2",
+    "discord": "^0.8a.2",
     "discord.js": "^12.3.1",
     "math.js": "^1.1.46",
     "mathjs": "^7.1.0"
   }
+}
